[tool.poetry]
name = "turtlemd"
version = "2023.2.dev2"
description = "A slow molecular dynamics library for testing"
authors = ["Anders Lervik <andersle@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
jax = {extras = ["cpu"], version = "^0.4.13"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-randomly = "^3.12.0"
jupyter-black = "^0.3.4"
pre-commit = "^3.3.3"
flake8 = "^6.0.0"

[tool.ruff]
line-length = 78
select = ["F", "E", "W", "I001", "UP"]
ignore-init-module-imports = true

[tool.black]
line-length = 78
target-version = ["py310", "py311"]

[tool.mypy]
warn_unused_ignores = true
show_error_codes = true
plugins = "numpy.typing.mypy_plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
